WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
282036
[css-flexbox] incorrect layout with max-height and flex-direction column and justify-content center
https://bugs.webkit.org/show_bug.cgi?id=282036
Summary
[css-flexbox] incorrect layout with max-height and flex-direction column and ...
Przemyslaw Gorszkowski
Reported
2024-10-24 03:08:05 PDT
The original problem was reported in
https://github.com/WebPlatformForEmbedded/WPEWebKit/issues/1417
. Here is simple test case:
https://codepen.io/pgorszkowski/pen/PoMOpze
Problem exists on Safarii/WebKitGTK/WPEWebkit Problem is not seen on Chrome/Firefox. The main issue is when we have an nested flexbox container inside other flexbox container and the main/outside flexbox container has max-height set to smaller value than the height value set in inside container. It can be observed only in case of flex-direction: column/column-reverse and justify-content: center/space-around/space-evenly for nested container. It seems that the max-height from the outside container is not taken into consideration when the final size(height) of the item is calculated.
Attachments
Add attachment
proposed patch, testcase, etc.
Przemyslaw Gorszkowski
Comment 1
2024-10-29 06:24:37 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/35859
Radar WebKit Bug Importer
Comment 2
2024-10-31 03:09:14 PDT
<
rdar://problem/138987797
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug